# cache_and_reduce

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cache_and_reduce/: __main__.py
cache_and_reduce/clients/: foo.py
cache_and_reduce/clients/bar/: cached.py  client.py  countered.py  reduced.py
cache_and_reduce/interfaces/: bar_client.py  foo_client.py
cache_and_reduce/servers/: bar.py  foo.py
cache_and_reduce/utils/: counter.py
